--- a/index.html
+++ b/index.html
@@ -26,20 +26,18 @@
                 </div>
         <div id="contents">
             <div class="content">
-                <img id="R" src="img/R.png" alt="R">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sed facere quam itaque, necessitatibus consectetur quas laboriosam inventore hic laborum fugit, unde odit ipsa totam, amet adipisci? Nesciunt, amet? Porro doloribus amet explicabo vel quos repellendus exercitationem sequi asperiores? Totam?</p>
-            </div>
-            <div class="content">
-                <img id="W" src="img/W.png" alt="W">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, dolorum delectus. Enim saepe consequuntur porro. Corporis placeat dolorum iusto nesciunt tempore nobis iure sequi debitis reprehenderit minima ipsa sit voluptates rem voluptate voluptas, optio esse voluptatum obcaecati suscipit nihil impedit.</p>
-            </div>
-            <div class="content">
-                <img id="B" class="down" src="img/B.png" alt="B">
-                <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ab blanditiis nobis vel. Cumque quia, voluptatem, ut iure veritatis error fugit sed delectus facere nemo iusto porro eius! Tempore totam ipsam repellat blanditiis aliquid? Commodi incidunt aperiam voluptatibus eius expedita?</p>
-            </div>
-            <div class="content">
-                <img id="Y" class="down" src="img/Y.png" alt="Y">
-                <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque consequuntur voluptatum minima nostrum aspernatur pariatur ipsa, ea accusantium modi qui eveniet ut maiores nesciunt. Autem quidem perferendis maxime tenetur ducimus! Accusamus commodi reprehenderit optio nostrum quae incidunt repellendus quaerat in.</p>
+                <img class="col R" src="img/R.png" alt="R">
+                <p class="col p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sed facere quam itaque, necessitatibus consectetur quas laboriosam inventore hic laborum fugit, unde odit ipsa totam, amet adipisci? Nesciunt, amet? Porro doloribus amet explicabo vel quos repellendus exercitationem sequi asperiores? Totam?</p>
+
+                <img class="col W" src="img/W.png" alt="W">
+                <p class="col p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, dolorum delectus. Enim saepe consequuntur porro. Corporis placeat dolorum iusto nesciunt tempore nobis iure sequi debitis reprehenderit minima ipsa sit voluptates rem voluptate voluptas, optio esse voluptatum obcaecati suscipit nihil impedit.</p>
+
+                <img class="col B" src="img/B.png" alt="B">
+                <p class="col p3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ab blanditiis nobis vel. Cumque quia, voluptatem, ut iure veritatis error fugit sed delectus facere nemo iusto porro eius! Tempore totam ipsam repellat blanditiis aliquid? Commodi incidunt aperiam voluptatibus eius expedita?</p>
+
+
+                <img class="col Y" src="img/Y.png" alt="Y">
+                <p class="col p4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque consequuntur voluptatum minima nostrum aspernatur pariatur ipsa, ea accusantium modi qui eveniet ut maiores nesciunt. Autem quidem perferendis maxime tenetur ducimus! Accusamus commodi reprehenderit optio nostrum quae incidunt repellendus quaerat in.</p>
             </div>
         </div>
     </div>
